# rtsp-webview

./: .dockerignore  .gitignore  AGENTS.md  AGENTS.md.old  Cargo.toml  LICENSE  Makefile  README.md
build-helpers/: README.md  build-linux-package.sh  build-linux-tarball.sh  build-macos-app.sh  build-windows-exe.bat  clean.bat  clean.sh  install-windows.bat  linux-packages.Dockerfile  linux-tarball.Dockerfile  uninstall-windows.bat
build-helpers/linux/: build-package.sh  build-tarball.sh  clean.sh  packages.Dockerfile  runtime-notes.txt  tarball.Dockerfile
build-helpers/linux/packaging/: build-package-from-tarball.sh
build-helpers/mac/: build-app.sh  clean.sh
build-helpers/windows/: build-exe.bat  clean.bat  install.bat
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  errors.rs  events.rs  main.rs  startup_checks.rs  state.rs  stub_streams.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: app.ts  events.ts  ipc.ts  main.ts  store.ts  styles.css  types.ts
ui/src/components/: app-settings-modal.ts  common.ts  empty-workspace.ts  fullscreen-hint.ts  fullscreen-panel.ts  global-settings-page.ts  notifications.ts  panel-card.ts  settings-modal.ts  tabs.ts  toolbar.ts
ui/tests/: app.integration.test.ts  fixtures.ts  store.test.ts
