[workspace]
members = [
  "crates/core",
  "crates/config",
  "crates/media",
  "crates/secrets",
  "src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["RTSP Viewer Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
